--- a/app.json
+++ b/app.json
@@ -1,7 +1,11 @@
 {
   "expo": {
-    "name": "comprar",
-    "slug": "comprar",
+    "name": "Todo App",
+    "slug": "todo-app",
+    "scheme": "todoapp",
+    "experiments": {
+      "typedRoutes": true
+    },
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./src/assets/icon.png",
@@ -25,6 +29,7 @@
     },
     "web": {
       "favicon": "./src/assets/favicon.png"
-    }
+    },
+    "plugins": ["expo-router"]
   }
 }
