--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "comprar",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -14,6 +14,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.2.0",
     "expo": "~54.0.29",
+    "expo-router": "~6.0.21",
     "expo-status-bar": "~3.0.9",
     "immer": "^11.0.1",
     "lucide-react-native": "^0.562.0",
@@ -22,6 +23,7 @@
     "react-native": "0.81.5",
     "react-native-get-random-values": "^2.0.0",
     "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
     "react-native-svg": "^15.15.1",
     "react-native-web": "^0.21.0",
     "uuid": "^13.0.0",
